Fix Node.js v22 compatibility issue with navigator property

--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
     "3mf"
   ],
   "author": "Your Name",
-  "license": "MIT"
+  "license": "MIT",
+  "engines": {
+    "node": ">=18.0.0 <22.0.0"
+  }
 }
